# dp-fair-intervention-benchmark

./: IO_RULES.md  LICENSE  README.md  TODO.md  pyproject.toml
data-example/Adult/: exec-alt1.sh  exec4.sh
data-example/Adult/aim/DP-dataset-epsilon-0.25/: aim_synthetic_train_dataset_seed_126613_epsilon_0.25.csv  aim_synthetic_train_dataset_seed_178753_epsilon_0.25.csv  aim_synthetic_train_dataset_seed_243421_epsilon_0.25.csv  aim_synthetic_train_dataset_seed_253_epsilon_0.25.csv  aim_synthetic_train_dataset_seed_53453_epsilon_0.25.csv
data-example/Adult/aim/DP-dataset-epsilon-0.5/: aim_synthetic_train_dataset_seed_126613_epsilon_0.5.csv  aim_synthetic_train_dataset_seed_460403_epsilon_0.5.csv  aim_synthetic_train_dataset_seed_553067_epsilon_0.5.csv  aim_synthetic_train_dataset_seed_767707_epsilon_0.5.csv  aim_synthetic_train_dataset_seed_96797_epsilon_0.5.csv
data-example/Adult/aim/DP-dataset-epsilon-0.75/: aim_synthetic_train_dataset_seed_243421_epsilon_0.75.csv  aim_synthetic_train_dataset_seed_583879_epsilon_0.75.csv
data-example/Adult/aim/DP-dataset-epsilon-1/: aim_synthetic_train_dataset_seed_126613_epsilon_1.csv  aim_synthetic_train_dataset_seed_243421_epsilon_1.csv  aim_synthetic_train_dataset_seed_460403_epsilon_1.csv  aim_synthetic_train_dataset_seed_53453_epsilon_1.csv
data-example/Adult/aim/DP-dataset-epsilon-10/: aim_synthetic_train_dataset_seed_113647_epsilon_10.csv  aim_synthetic_train_dataset_seed_126613_epsilon_10.csv  aim_synthetic_train_dataset_seed_32645_epsilon_10.csv  aim_synthetic_train_dataset_seed_4112_epsilon_10.csv  aim_synthetic_train_dataset_seed_42_epsilon_10.csv  aim_synthetic_train_dataset_seed_53453_epsilon_10.csv  aim_synthetic_train_dataset_seed_583879_epsilon_10.csv
data-example/Adult/aim/DP-dataset-epsilon-15/: aim_synthetic_train_dataset_seed_133843_epsilon_15.csv  aim_synthetic_train_dataset_seed_243421_epsilon_15.csv  aim_synthetic_train_dataset_seed_553067_epsilon_15.csv  aim_synthetic_train_dataset_seed_767707_epsilon_15.csv
data-example/Adult/aim/DP-dataset-epsilon-20/: aim_synthetic_train_dataset_seed_113647_epsilon_20.csv  aim_synthetic_train_dataset_seed_126613_epsilon_20.csv  aim_synthetic_train_dataset_seed_253_epsilon_20.csv  aim_synthetic_train_dataset_seed_4112_epsilon_20.csv  aim_synthetic_train_dataset_seed_5_epsilon_20.csv  aim_synthetic_train_dataset_seed_602627_epsilon_20.csv  aim_synthetic_train_dataset_seed_6977_epsilon_20.csv
data-example/Adult/aim/DP-dataset-epsilon-5/: aim_synthetic_train_dataset_seed_460403_epsilon_5.csv  aim_synthetic_train_dataset_seed_583879_epsilon_5.csv  aim_synthetic_train_dataset_seed_767707_epsilon_5.csv
data-example/Adult/aim/DP-dataset-test-val/: split_test_val_dataset_seed_602627.csv
data-example/Adult/aim/DP-dataset-train/: split_train_dataset_seed_42_eps_20_.csv
data-example/Adult/dpctgan/DP-dataset-epsilon-0.25/: dpctgan_synthetic_train_dataset_seed_113647_epsilon_0.25.csv  dpctgan_synthetic_train_dataset_seed_32645_epsilon_0.25.csv  dpctgan_synthetic_train_dataset_seed_4112_epsilon_0.25.csv
data-example/Adult/dpctgan/DP-dataset-epsilon-0.5/: dpctgan_synthetic_train_dataset_seed_126613_epsilon_0.5.csv  dpctgan_synthetic_train_dataset_seed_133843_epsilon_0.5.csv  dpctgan_synthetic_train_dataset_seed_42_epsilon_0.5.csv  dpctgan_synthetic_train_dataset_seed_460403_epsilon_0.5.csv  dpctgan_synthetic_train_dataset_seed_53453_epsilon_0.5.csv  dpctgan_synthetic_train_dataset_seed_602627_epsilon_0.5.csv  dpctgan_synthetic_train_dataset_seed_796969_epsilon_0.5.csv
data-example/Adult/dpctgan/DP-dataset-epsilon-0.75/: dpctgan_synthetic_train_dataset_seed_133843_epsilon_0.75.csv  dpctgan_synthetic_train_dataset_seed_32645_epsilon_0.75.csv
data-example/Adult/dpctgan/DP-dataset-epsilon-1/: dpctgan_synthetic_train_dataset_seed_126613_epsilon_1.csv  dpctgan_synthetic_train_dataset_seed_133843_epsilon_1.csv  (+5 more)
data/Adult/: CountryContinentMap.py  dp_adult_dataset_generator.py  dp_adult_dataset_generator_extra.py  dp_adult_dataset_generator_separate.py  exec-alt2.sh  exec.sh  exec1.sh  exec2.sh  exec3.sh
data/Compas/: README.md  dp_compas_dataset_generator.py  exec.sh
data/Folktables/: Groups.py  README.md  analysis.py  dp_folktables_dataset_generator.py  exec.sh
example/: BenchmarkDPF_test.py  DPF_Benchmark-AcsIncome.py  DPF_Benchmark-Adult.py  DPF_Benchmark-Compas.py  DPF_Benchmark.py  DPF_DataGeneration.py  main-del.py
notebook/: Plot-Line.ipynb  Plot_Bar.ipynb
src/Benchmark/: __init__.py  benchmark.py  dataconf.py
src/Benchmark/utils/: auxiliar.py  benchmark.py  inp.py  model.py  pos.py  pre.py  types.py  verifiers.py
src/BenchmarkDPFair/: __init__.py
src/BenchmarkDPFair/Benchmark/: TODO.md  __init__.py  benchmark.py  dataconf.py
src/BenchmarkDPFair/DataGenerator/: __init__.py  dataconf.py  datagen.py
src/DataGenerator/: __init__.py  dataconf.py  datagen.py
tests/: test_benchmark.py  test_dataconf.py
(+1530 files in other folders)
