[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BenchmarkDPFair"
version = "0.1.0"
description = "A differentially private data synthesizer and fairness intervention benchmark framework"
authors = [
  { name="Vinicius Gabriel Angelozzi Verona de Resende", email="contact.verona@tutanota.com" },
  { name="Héber Hwang Arcolezi", email="heber.hwang-arcolezi@inria.fr" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "aif360==0.6.1",
  "absl-py==2.3.0",
  "antlr4-python3-runtime==4.9.3",
  "asttokens==3.0.0",
  "astunparse==1.6.3",
  "BlackBoxAuditing==0.1.54",
  "certifi==2025.4.26",
  "cffi==1.17.1",
  "charset-normalizer==3.4.2",
  "clarabel==0.11.0",
  "contourpy==1.3.0",
  "cvxpy==1.6.5",
  "cycler==0.12.1",
  "decorator==5.2.1",
  "Deprecated==1.2.18",
  "disjoint-set==0.8.0",
  "exceptiongroup==1.3.0",
  "executing==2.2.0",
  "fairlearn==0.12.0",
  "faker==37.3.0",
  "filelock==3.18.0",
  "flatbuffers==25.2.10",
  "folktables==0.0.12",
  "fonttools==4.58.1",
  "fsspec==2025.5.1",
  "gast==0.6.0",
  "google-pasta==0.2.0",
  "graphviz==0.20.3",
  "greenlet==3.2.2",
  "grpcio==1.71.0",
  "h5py==3.13.0",
  "idna==3.10",
  "importlib-metadata==8.7.0",
  "importlib-resources==6.5.2",
  "inFairness==0.2.3",
  "ipython==8.18.1",
  "jax==0.4.30",
  "jaxlib==0.4.30",
  "jedi==0.19.2",
  "jinja2==3.1.6",
  "joblib==1.5.1",
  "keras==3.10.0",
  "kiwisolver==1.4.7",
  "libclang==18.1.1",
  "markdown==3.8",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "matplotlib==3.9.4",
  "matplotlib-inline==0.1.7",
  "mdurl==0.1.2",
  "memory-profiler==0.61.0",
  "ml-dtypes==0.5.1",
  "mpmath==1.3.0",
  "namex==0.1.0",
  "networkx==3.2.1",
  "nose==1.3.7",
  "numpy==1.26.4",
  "nvidia-cublas-cu12==12.6.4.1",
  "nvidia-cuda-cupti-cu12==12.6.80",
  "nvidia-cuda-nvrtc-cu12==12.6.77",
  "nvidia-cuda-runtime-cu12==12.6.77",
  "nvidia-cudnn-cu12==9.5.1.17",
  "nvidia-cufft-cu12==11.3.0.4",
  "nvidia-cufile-cu12==1.11.1.6",
  "nvidia-curand-cu12==10.3.7.77",
  "nvidia-cusolver-cu12==11.7.1.2",
  "nvidia-cusparse-cu12==12.5.4.2",
  "nvidia-cusparselt-cu12==0.6.3",
  "nvidia-nccl-cu12==2.26.2",
  "nvidia-nvjitlink-cu12==12.6.85",
  "nvidia-nvtx-cu12==12.6.77",
  "opacus==0.14.0",
  "opendp==0.12.1",
  "opt-einsum==3.4.0",
  "optree==0.16.0",
  "osqp==1.0.4",
  "pac-synth==0.0.8",
  "packaging==25.0",
  "pandas==2.2.3",
  "parso==0.8.4",
  "pexpect==4.9.0",
  "pillow==11.2.1",
  "POT==0.9.5",
  "private-pgm @ git+https://github.com/ryan112358/private-pgm.git@01f02f17eba440f4e76c1d06fa5ee9eed0bd2bca",
  "prompt-toolkit==3.0.51",
  "protobuf==5.29.5",
  "psutil==7.0.0",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "pycparser==2.22",
  "pygments==2.19.1",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "PyYAML==6.0.2",
  "requests==2.32.3",
  "rich==14.0.0",
  "scikit-learn==1.6.1",
  "scipy==1.13.1",
  "scs==3.2.7.post2",
  "seaborn==0.13.2",
  "six==1.17.0",
  "skorch==1.1.0",
  "smartnoise-sql==1.0.6",
  "smartnoise-synth==1.0.5",
  "sqlalchemy==2.0.41",
  "stack-data==0.6.3",
  "sympy==1.14.0",
  "tabulate==0.9.0",
  "tensorboard==2.19.0",
  "tensorboard-data-server==0.7.2",
  "tensorflow==2.19.0",
  "tensorflow-io-gcs-filesystem==0.37.1",
  "termcolor==3.1.0",
  "threadpoolctl==3.6.0",
  "torch==2.7.0",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "triton==3.3.0",
  "typing-extensions==4.13.2",
  "tzdata==2025.2",
  "ucimlrepo==0.0.7",
  "urllib3==2.4.0",
  "wcwidth==0.2.13",
  "werkzeug==3.1.3",
  "wrapt==1.17.2",
  "xgboost==2.1.1",
  "zipp==3.22.0"

]
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]